Change Aurora device support to cover additional Nanoleaf devices * Support Nanoleaf LightPanels (aka Aurora) and Canvas * Add Nanoleaf Device discovery * Update SSDPDiscover to be generic for given services

--- a/libsrc/leddevice/CMakeLists.txt
+++ b/libsrc/leddevice/CMakeLists.txt
@@ -87,6 +87,7 @@ target_link_libraries(leddevice
 	${CMAKE_THREAD_LIBS_INIT}
 	Qt5::Network
 	Qt5::SerialPort
+        ssdp
 )
 
 if(ENABLE_TINKERFORGE)
