Cross-Compile - Separate flatc scenario for native and cross-compiling

--- a/dependencies/CMakeLists.txt
+++ b/dependencies/CMakeLists.txt
@@ -40,14 +40,14 @@ else ()
 	set(FLATBUFFERS_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/external/flatbuffers/include")
 	set(FLATBUFFERS_INCLUDE_DIRS ${FLATBUFFERS_INCLUDE_DIRS} PARENT_SCOPE)
 
-	# define the flatc executable at the parent scope
-	get_property(FLATBUFFERS_FLATC_EXECUTABLE TARGET flatc PROPERTY LOCATION)
-
-	IF ( CMAKE_CROSSCOMPILING )
+	IF (NOT CMAKE_CROSSCOMPILING)
+		# define the flatc executable at the parent scope
+		get_property(FLATBUFFERS_FLATC_EXECUTABLE TARGET flatc PROPERTY LOCATION)
+	else()
 		#Workaround, set flatc comiplier directory hard, as cmake definitions of flatc do not cater for crosscompile correctly.
 		#Includ of flatc_export.cmake detects that flatc target is defined aand returns before using the definitions written by export
 		set ( FLATBUFFERS_FLATC_EXECUTABLE "${CMAKE_BINARY_DIR}/../build-x86x64/bin/flatc")
-	ENDIF()
+	endif()
 
 	set(FLATBUFFERS_FLATC_EXECUTABLE ${FLATBUFFERS_FLATC_EXECUTABLE} PARENT_SCOPE)
 
