GitHub package creation/upload

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,11 +18,29 @@ if(CCACHE_FOUND)
 	set_property(GLOBAL PROPERTY RULE_LAUNCH_LINK ccache)
 endif(CCACHE_FOUND)
 
-SET ( HYPERION_VERSION_STABLE OFF )
-SET ( HYPERION_VERSION_MAJOR 2 )
-SET ( HYPERION_VERSION_MINOR 0 )
-SET ( HYPERION_VERSION_PATCH 0 )
+# Read version from version.json
+EXECUTE_PROCESS (
+	COMMAND python test/jsonchecks/version.py ${PROJECT_SOURCE_DIR}/version.json
+	WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+	OUTPUT_VARIABLE RETURN_VERSION
+)
 
+SET(VERSION_REGEX "[0-9]+\\.[0-9]+\\.[0-9]+(-[a-zA-Z0-9_]+)?")
+IF( ${RETURN_VERSION} MATCHES ${VERSION_REGEX} )
+	STRING(REGEX MATCHALL "[0-9]+|-([A-Za-z0-9_]+)" VERSION_PARTS ${RETURN_VERSION})
+	LIST(GET VERSION_PARTS 0 VERSION_MAJOR)
+	LIST(GET VERSION_PARTS 1 VERSION_MINOR)
+	LIST(GET VERSION_PARTS 2 VERSION_PATCH)
+ELSE( ${RETURN_VERSION} MATCHES ${VERSION_REGEX} )
+	message( FATAL_ERROR "Failed to parse version.json string properly. Expect X.Y.Z.")
+ENDIF()
+
+SET ( HYPERION_VERSION_STABLE OFF )
+SET ( HYPERION_VERSION_MAJOR ${VERSION_MAJOR} )
+SET ( HYPERION_VERSION_MINOR ${VERSION_MINOR} )
+SET ( HYPERION_VERSION_PATCH ${VERSION_PATCH} )
+
+# Set build variables
 SET ( DEFAULT_AMLOGIC    OFF )
 SET ( DEFAULT_DISPMANX   OFF )
 SET ( DEFAULT_OSX        OFF )
@@ -121,9 +139,10 @@ if ( "${PLATFORM}" MATCHES "-dev" )
 	SET ( DEFAULT_TESTS      ON )
 endif()
 
-STRING( TOUPPER "-DPLATFORM_${PLATFORM}" PLATFORM_DEFINE)
-STRING( REPLACE "-DEV" "" PLATFORM_DEFINE "${PLATFORM_DEFINE}" )
-ADD_DEFINITIONS( ${PLATFORM_DEFINE} )
+# is this necessary?
+# STRING( TOUPPER "-DPLATFORM_${PLATFORM}" PLATFORM_DEFINE)
+# STRING( REPLACE "-DEV" "" PLATFORM_DEFINE "${PLATFORM_DEFINE}" )
+# ADD_DEFINITIONS( ${PLATFORM_DEFINE} )
 
 # set the build options
 option(ENABLE_AMLOGIC "Enable the AMLOGIC video grabber" ${DEFAULT_AMLOGIC} )
