--- a/.azure.yml
+++ b/.azure.yml
@@ -35,6 +35,14 @@ jobs:
   - checkout: self # represents the repo where the initial Pipelines YAML file was found
     submodules: recursive # set to 'recursive' to get submodules of submodules
 
+  # read channel tag in version.json
+  - task: oneLuckiDevJson2Variable@1
+    inputs:
+      jsonFile: 'version.json'
+      shouldPrefixVariables: true
+      variablePrefix: 'json'
+    displayName: 'Read and generate pipeline variables'
+
   # build process
   - bash: ./.ci/ci_build.sh
     displayName: 'Build $(dockerName)'
@@ -42,15 +50,6 @@ jobs:
       DOCKER_TAG: $(dockerTag)
       DOCKER_NAME: $(dockerName)
       PLATFORM: $(platform)
-
-  # read version.json and generate pipeline variables
-  - task: oneLuckiDevJson2Variable@1
-    inputs:
-      jsonFile: 'version.json'
-      shouldPrefixVariables: true
-      variablePrefix: 'json'
-    condition: and(succeeded(), ne(variables['system.pullrequest.isfork'], true), startsWith(variables['Build.SourceBranch'], 'refs/tags/'))
-    displayName: 'Read and generate pipeline variables'
 
   # copy files
   - bash: 'cp -v deploy/Hyperion.NG-* $(Build.ArtifactStagingDirectory)'
@@ -66,10 +65,10 @@ jobs:
     condition: and(succeeded(), ne(variables['system.pullrequest.isfork'], true), startsWith(variables['Build.SourceBranch'], 'refs/tags/'))
     displayName: 'Publish deployables artifacts'
 
-  # assign latest tag variable
-  - bash: echo "##vso[task.setvariable variable=latestTag]$(git tag | tail -1)"
-    displayName: "Read latest tag"
-    condition: and(succeeded(), ne(variables['system.pullrequest.isfork'], true), startsWith(variables['Build.SourceBranch'], 'refs/tags/'))
+  # set release to pre-release
+  - bash: echo '##vso[task.setvariable variable=preRelease;]true'
+    condition: and(succeeded(), contains(variables['json.channel'], 'beta'), ne(variables['system.pullrequest.isfork'], true), startsWith(variables['Build.SourceBranch'], 'refs/tags/'))
+    displayName: 'Mark beta as pre-release'
 
   # create or update github release
   - task: GithubRelease@0
@@ -79,14 +78,11 @@ jobs:
       action: edit
       target: $(Build.SourceVersion)
       tagSource: manual
-      tag: '$(latestTag)'
-      title: '# $(latestTag) v$(json.versionnr)'
-      releaseNotesSource: input
-      releaseNotes: $(Build.SourceVersionMessage)
+      tag: $(Build.SourceBranchName)
       assets: '$(Build.ArtifactStagingDirectory)/*'
       assetUploadMode: 'replace'
-      isPreRelease: true
       addChangeLog: false
+      isPreRelease: $(preRelease)
     condition: and(succeeded(), ne(variables['system.pullrequest.isfork'], true), startsWith(variables['Build.SourceBranch'], 'refs/tags/'))
     displayName: Create/Update GitHub release
 
@@ -103,6 +99,14 @@ jobs:
   - checkout: self # represents the repo where the initial Pipelines YAML file was found
     submodules: recursive # set to 'recursive' to get submodules of submodules
 
+  # read channel tag in version.json
+  - task: oneLuckiDevJson2Variable@1
+    inputs:
+      jsonFile: 'version.json'
+      shouldPrefixVariables: true
+      variablePrefix: 'json'
+    displayName: 'Read and generate pipeline variables'
+
   # install dependencies
   - bash: ./.ci/ci_install.sh
     displayName: 'Install dependencies'
@@ -110,15 +114,6 @@ jobs:
   # build process
   - bash: ./.ci/ci_build.sh
     displayName: 'Build macOS 10.13'
-
-  # read version.json and generate pipeline variables
-  - task: oneLuckiDevJson2Variable@1
-    inputs:
-      jsonFile: 'version.json'
-      shouldPrefixVariables: true
-      variablePrefix: 'json'
-    condition: and(succeeded(), ne(variables['system.pullrequest.isfork'], true), startsWith(variables['Build.SourceBranch'], 'refs/tags/'))
-    displayName: 'Read and generate pipeline variables'
 
   # copy files
   - bash: 'cp -v build/Hyperion.NG-* $(Build.ArtifactStagingDirectory)'
@@ -134,10 +129,10 @@ jobs:
     condition: and(succeeded(), ne(variables['system.pullrequest.isfork'], true), startsWith(variables['Build.SourceBranch'], 'refs/tags/'))
     displayName: 'Publish deployables artifacts'
 
-  # generate latest tag variable
-  - bash: echo "##vso[task.setvariable variable=latestTag]$(git tag | tail -1)"
-    displayName: "Read latest tag"
-    condition: and(succeeded(), ne(variables['system.pullrequest.isfork'], true), startsWith(variables['Build.SourceBranch'], 'refs/tags/'))
+  # set release to pre-release
+  - bash: echo '##vso[task.setvariable variable=preRelease;]true'
+    condition: and(succeeded(), contains(variables['json.channel'], 'beta'), ne(variables['system.pullrequest.isfork'], true), startsWith(variables['Build.SourceBranch'], 'refs/tags/'))
+    displayName: 'Mark beta as pre-release'
 
   # create or update github release
   - task: GithubRelease@0
@@ -147,13 +142,10 @@ jobs:
       action: edit
       target: $(Build.SourceVersion)
       tagSource: manual
-      tag: '$(latestTag)'
-      title: '# $(latestTag) v$(json.versionnr)'
-      releaseNotesSource: input
-      releaseNotes: $(Build.SourceVersionMessage)
+      tag: '$(Build.SourceBranchName)'
       assets: '$(Build.ArtifactStagingDirectory)/*'
       assetUploadMode: 'replace'
-      isPreRelease: true
       addChangeLog: false
+      isPreRelease: $(preRelease)
     condition: and(succeeded(), ne(variables['system.pullrequest.isfork'], true), startsWith(variables['Build.SourceBranch'], 'refs/tags/'))
     displayName: Create/Update GitHub release
