--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,20 +25,28 @@ EXECUTE_PROCESS (
 	OUTPUT_VARIABLE RETURN_VERSION
 )
 
-SET(VERSION_REGEX "[0-9]+\\.[0-9]+\\.[0-9]+(-[a-zA-Z0-9_]+)?")
-IF( ${RETURN_VERSION} MATCHES ${VERSION_REGEX} )
-	STRING(REGEX MATCHALL "[0-9]+|-([A-Za-z0-9_]+)" VERSION_PARTS ${RETURN_VERSION})
-	LIST(GET VERSION_PARTS 0 VERSION_MAJOR)
-	LIST(GET VERSION_PARTS 1 VERSION_MINOR)
-	LIST(GET VERSION_PARTS 2 VERSION_PATCH)
+SET( VERSION_REGEX "[0-9]+\\.[0-9]+\\.[0-9]+(-[a-zA-Z0-9_]+)?" )
+IF( ${RETURN_VERSION} MATCHES ${VERSION_REGEX})
+	STRING(REGEX MATCHALL "[0-9]+|-([A-Za-z0-9_]+)" VERSION_PARTS ${RETURN_VERSION} )
+	LIST( GET VERSION_PARTS 0 VERSION_MAJOR )
+	LIST( GET VERSION_PARTS 1 VERSION_MINOR )
+	LIST( GET VERSION_PARTS 2 VERSION_PATCH )
 ELSE( ${RETURN_VERSION} MATCHES ${VERSION_REGEX} )
 	message( FATAL_ERROR "Failed to parse version.json string properly. Expect X.Y.Z.")
 ENDIF()
 
-SET ( HYPERION_VERSION_STABLE OFF )
-SET ( HYPERION_VERSION_MAJOR ${VERSION_MAJOR} )
-SET ( HYPERION_VERSION_MINOR ${VERSION_MINOR} )
-SET ( HYPERION_VERSION_PATCH ${VERSION_PATCH} )
+SET( HYPERION_VERSION_MAJOR ${VERSION_MAJOR} )
+SET( HYPERION_VERSION_MINOR ${VERSION_MINOR} )
+SET( HYPERION_VERSION_PATCH ${VERSION_PATCH} )
+
+# Read channel from version.json
+EXECUTE_PROCESS (
+	COMMAND python test/jsonchecks/version.py ${PROJECT_SOURCE_DIR}/version.json "channel"
+	WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+	OUTPUT_VARIABLE RETURN_CHANNEL
+)
+
+SET ( HYPERION_VERSION_CHANNEL ${RETURN_CHANNEL} )
 
 # Set build variables
 SET ( DEFAULT_AMLOGIC    OFF )
