--- a/test/dispmanx2png/CMakeLists.txt
+++ b/test/dispmanx2png/CMakeLists.txt
@@ -3,6 +3,9 @@ IF ( "${PLATFORM}" MATCHES rpi)
 	# Find the BCM-package (VC control)
 	find_package(Qt5Widgets REQUIRED)
 
+	find_package(BCM REQUIRED)
+	include_directories(${BCM_INCLUDE_DIRS})
+
 	add_definitions(${QT_DEFINITIONS})
 	link_directories(${CMAKE_FIND_ROOT_PATH}/lib/arm-linux-gnueabihf)
 
