--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,14 +80,6 @@ ELSE()
 	SET ( DEFAULT_USB_HID OFF )
 ENDIF()
 
-if (APPLE)
-	SET( PLATFORM "osx")
-endif()
-
-if (WIN32)
-	SET( PLATFORM "windows")
-endif()
-
 if ( NOT DEFINED PLATFORM )
 	if ( "${CMAKE_SYSTEM_PROCESSOR}" MATCHES "x86" )
 		SET( PLATFORM "x11")
@@ -100,6 +92,10 @@ if ( NOT DEFINED PLATFORM )
 		elseif ( ("${SYSTEM_CPUINFO}" MATCHES "amlogic" OR "${SYSTEM_CPUINFO}" MATCHES "odroid-c2" OR "${SYSTEM_CPUINFO}" MATCHES "vero4k") AND ${CMAKE_SIZEOF_VOID_P} EQUAL 8 )
 			SET( PLATFORM "amlogic64" )
 		endif()
+	elseif ( APPLE )
+		SET( PLATFORM "osx")
+	elseif ( WIN32 )
+		SET( PLATFORM "windows")
 	endif()
 	if ( PLATFORM )
 		message( STATUS "PLATFORM is not defined, evaluated platform: ${PLATFORM}")
