--- a/libsrc/CMakeLists.txt
+++ b/libsrc/CMakeLists.txt
@@ -18,5 +18,6 @@ add_subdirectory(utils)
 add_subdirectory(effectengine)
 add_subdirectory(grabber)
 add_subdirectory(webserver)
+add_subdirectory(db)
 add_subdirectory(api)
 add_subdirectory(python)
