Feat: Add SSL support for webserver + websocket
Finally, Hyperion reaches the SSL century!
- Uses by default a internal key and certificate to provide working HTTPS out-of-the-box
- Your browser won't like that, for a green ssl seal next to the browser address bar you need to use Let's Encrypt with a own legit domain. This is out of the scope of Hyperion

--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -5,7 +5,7 @@
 SET(CURRENT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/resources)
 
 # catch all files
-FILE ( GLOB Hyperion_RESFILES "${CURRENT_SOURCE_DIR}/icons/*" )
+FILE ( GLOB Hyperion_RESFILES "${CURRENT_SOURCE_DIR}/icons/*" "${CURRENT_SOURCE_DIR}/ssl/*" )
 
 # fill resources.qrc with RESFILES
 FOREACH( f ${Hyperion_RESFILES} )
