Embed QSQLITE driver at Amlogic platform

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -317,6 +317,13 @@ IF ( "${Qt5Core_VERSION}" VERSION_LESS "${QT_MIN_VERSION}" )
 	message( FATAL_ERROR "Your Qt version is to old! Minimum required ${QT_MIN_VERSION}" )
 ENDIF()
 
+if (ENABLE_AMLOGIC)
+	foreach(plugin ${Qt5Sql_PLUGINS} Qt5::Sql)
+		get_target_property(_loc ${plugin} LOCATION)
+		set(plugin_libs ${plugin_libs} ${_loc})
+	endforeach()
+endif()
+
 # Add libusb and pthreads
 find_package(libusb-1.0 REQUIRED)
 find_package(Threads REQUIRED)
