[HotFix] The Python version number was explicitly set
Signed-off-by: Paulchen Panther <Paulchen-Panter@protonmail.com>

--- a/libsrc/effectengine/CMakeLists.txt
+++ b/libsrc/effectengine/CMakeLists.txt
@@ -1,3 +1,4 @@
+set(Python_ADDITIONAL_VERSIONS 3.5)
 find_package(PythonLibs 3.5 REQUIRED)
 
 # Include the python directory. Also include the parent (which is for example /usr/include)
