Update to semver version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,11 @@ message( STATUS "CMake Version: ${CMAKE_VERSION}" )
 
 PROJECT(hyperion)
 
+# Hyperion Semantic Version 2.0.0 definition
+# The "stable" can be replaced with alpha.1 | beta.1 |rc.1 and so on
+include (${CMAKE_CURRENT_SOURCE_DIR}/cmake/version.cmake)
+SetVersionNumber(HYPERION 2 0 0 alpha.1)
+
 # Instruct CMake to run moc automatically when needed.
 set(CMAKE_AUTOMOC ON)
 # auto prepare .qrc files
@@ -22,42 +27,6 @@ endif(CCACHE_FOUND)
 
 set(Python_ADDITIONAL_VERSIONS 3.5)
 find_package( PythonInterp 3.5 REQUIRED )
-
-# Read version from version.json
-EXECUTE_PROCESS (
-	COMMAND ${PYTHON_EXECUTABLE} test/jsonchecks/version.py version.json
-	WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
-	RESULT_VARIABLE error_code
-	OUTPUT_VARIABLE RETURN_VERSION
-)
-
-SET( VERSION_REGEX "[0-9]+\\.[0-9]+\\.[0-9]+(-[a-zA-Z0-9_]+)?" )
-if ( ${RETURN_VERSION} MATCHES ${VERSION_REGEX} )
-	STRING(REGEX MATCHALL "[0-9]+|-([A-Za-z0-9_]+)" VERSION_PARTS ${RETURN_VERSION} )
-	LIST( GET VERSION_PARTS 0 VERSION_MAJOR )
-	LIST( GET VERSION_PARTS 1 VERSION_MINOR )
-	LIST( GET VERSION_PARTS 2 VERSION_PATCH )
-else ( ${RETURN_VERSION} MATCHES ${VERSION_REGEX} )
-	message( FATAL_ERROR "Failed to parse version.json string properly. ${error_code}" )
-endif()
-
-SET( HYPERION_VERSION_MAJOR ${VERSION_MAJOR} )
-SET( HYPERION_VERSION_MINOR ${VERSION_MINOR} )
-SET( HYPERION_VERSION_PATCH ${VERSION_PATCH} )
-
-# Read channel from version.json
-EXECUTE_PROCESS (
-	COMMAND ${PYTHON_EXECUTABLE} test/jsonchecks/version.py version.json "channel"
-	WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
-	RESULT_VARIABLE error_code
-	OUTPUT_VARIABLE RETURN_CHANNEL
-)
-
-if ( error_code )
-	message( FATAL_ERROR "Failed to parse version.json string properly. ${error_code}" )
-endif()
-
-SET ( HYPERION_VERSION_CHANNEL ${RETURN_CHANNEL} )
 
 # Set build variables
 SET ( DEFAULT_AMLOGIC    OFF )
