--- a/HyperionConfig.h.in
+++ b/HyperionConfig.h.in
@@ -38,6 +38,7 @@
 
 // the hyperion build id string
 #define HYPERION_BUILD_ID "${HYPERION_BUILD_ID}"
+#define HYPERION_GIT_REMOTE "${HYPERION_GIT_REMOTE}"
 
 #define HYPERION_VERSION_MAJOR   "${HYPERION_VERSION_MAJOR}"
 #define HYPERION_VERSION_MINOR   "${HYPERION_VERSION_MINOR}"
