--- a/.azure.yml
+++ b/.azure.yml
@@ -35,12 +35,9 @@ jobs:
   - checkout: self # represents the repo where the initial Pipelines YAML file was found
     submodules: recursive # set to 'recursive' to get submodules of submodules
 
-  # read channel tag in version.json
-  - task: oneLuckiDevJson2Variable@1
-    inputs:
-      jsonFile: 'version.json'
-      shouldPrefixVariables: true
-      variablePrefix: 'json'
+  # read version file
+  - bash: echo "##vso[task.setvariable variable=semVer]$(grep -oE 'alpha|beta' version)"
+    workingDirectory: '$(Build.SourcesDirectory)'
     displayName: 'Read and generate pipeline variables'
 
   # build process
@@ -52,7 +49,7 @@ jobs:
       PLATFORM: $(platform)
 
   # copy files
-  - bash: 'cp -v deploy/Hyperion.NG-* $(Build.ArtifactStagingDirectory)'
+  - bash: 'cp -v deploy/Hyperion-* $(Build.ArtifactStagingDirectory) 2>/dev/null || :'
     workingDirectory: '$(Build.SourcesDirectory)'
     condition: and(succeeded(), ne(variables['system.pullrequest.isfork'], true), startsWith(variables['Build.SourceBranch'], 'refs/tags/'))
     displayName: 'Collecting deployable artifacts'
@@ -67,8 +64,8 @@ jobs:
 
   # set release to pre-release
   - bash: echo '##vso[task.setvariable variable=preRelease;]true'
-    condition: and(succeeded(), contains(variables['json.channel'], 'beta'), ne(variables['system.pullrequest.isfork'], true), startsWith(variables['Build.SourceBranch'], 'refs/tags/'))
-    displayName: 'Mark beta as pre-release'
+    condition: and(succeeded(), or(contains(variables['semVer'], 'alpha'), contains(variables['semVer'], 'beta')), ne(variables['system.pullrequest.isfork'], true), startsWith(variables['Build.SourceBranch'], 'refs/tags/'))
+    displayName: 'Mark alpha or beta as pre-release'
 
   # create or update github release
   - task: GithubRelease@0
@@ -99,12 +96,9 @@ jobs:
   - checkout: self # represents the repo where the initial Pipelines YAML file was found
     submodules: recursive # set to 'recursive' to get submodules of submodules
 
-  # read channel tag in version.json
-  - task: oneLuckiDevJson2Variable@1
-    inputs:
-      jsonFile: 'version.json'
-      shouldPrefixVariables: true
-      variablePrefix: 'json'
+  # read version file
+  - bash: echo "##vso[task.setvariable variable=semVer]$(grep -oE 'alpha|beta' version)"
+    workingDirectory: '$(Build.SourcesDirectory)'
     displayName: 'Read and generate pipeline variables'
 
   # install dependencies
@@ -118,7 +112,7 @@ jobs:
       PLATFORM: 'osx'
 
   # copy files
-  - bash: 'cp -v build/Hyperion.NG-* $(Build.ArtifactStagingDirectory)'
+  - bash: 'cp -v build/Hyperion-* $(Build.ArtifactStagingDirectory) 2>/dev/null || :'
     workingDirectory: '$(Build.SourcesDirectory)'
     condition: and(succeeded(), ne(variables['system.pullrequest.isfork'], true), startsWith(variables['Build.SourceBranch'], 'refs/tags/'))
     displayName: 'Collecting deployable artifacts'
@@ -133,8 +127,8 @@ jobs:
 
   # set release to pre-release
   - bash: echo '##vso[task.setvariable variable=preRelease;]true'
-    condition: and(succeeded(), contains(variables['json.channel'], 'beta'), ne(variables['system.pullrequest.isfork'], true), startsWith(variables['Build.SourceBranch'], 'refs/tags/'))
-    displayName: 'Mark beta as pre-release'
+    condition: and(succeeded(), or(contains(variables['semVer'], 'alpha'), contains(variables['semVer'], 'beta')), ne(variables['system.pullrequest.isfork'], true), startsWith(variables['Build.SourceBranch'], 'refs/tags/'))
+    displayName: 'Mark alpha or beta as pre-release'
 
   # create or update github release
   - task: GithubRelease@0
