--- a/.azure.yml
+++ b/.azure.yml
@@ -36,7 +36,9 @@ jobs:
     submodules: recursive # set to 'recursive' to get submodules of submodules
 
   # read version file
-  - bash: echo "##vso[task.setvariable variable=semVer]$(grep -oE 'alpha|beta' version)"
+  - bash: |
+      echo "##vso[task.setvariable variable=semVer]$(cat version)"
+      echo "##vso[task.setvariable variable=preRel]$(grep -oE 'alpha|beta' version)"
     workingDirectory: '$(Build.SourcesDirectory)'
     displayName: 'Read and generate pipeline variables'
 
@@ -64,7 +66,7 @@ jobs:
 
   # set release to pre-release
   - bash: echo '##vso[task.setvariable variable=preRelease;]true'
-    condition: and(succeeded(), or(contains(variables['semVer'], 'alpha'), contains(variables['semVer'], 'beta')), ne(variables['system.pullrequest.isfork'], true), startsWith(variables['Build.SourceBranch'], 'refs/tags/'))
+    condition: and(succeeded(), or(contains(variables['preRel'], 'alpha'), contains(variables['preRel'], 'beta')), ne(variables['system.pullrequest.isfork'], true), startsWith(variables['Build.SourceBranch'], 'refs/tags/'))
     displayName: 'Mark alpha or beta as pre-release'
 
   # create or update github release
@@ -76,6 +78,7 @@ jobs:
       target: $(Build.SourceVersion)
       tagSource: manual
       tag: $(Build.SourceBranchName)
+      title: 'Hyperion $(semVer)'
       assets: '$(Build.ArtifactStagingDirectory)/*'
       assetUploadMode: 'replace'
       addChangeLog: false
@@ -97,7 +100,9 @@ jobs:
     submodules: recursive # set to 'recursive' to get submodules of submodules
 
   # read version file
-  - bash: echo "##vso[task.setvariable variable=semVer]$(grep -oE 'alpha|beta' version)"
+  - bash: |
+      echo "##vso[task.setvariable variable=semVer]$(cat version)"
+      echo "##vso[task.setvariable variable=preRel]$(grep -oE 'alpha|beta' version)"
     workingDirectory: '$(Build.SourcesDirectory)'
     displayName: 'Read and generate pipeline variables'
 
@@ -127,7 +132,7 @@ jobs:
 
   # set release to pre-release
   - bash: echo '##vso[task.setvariable variable=preRelease;]true'
-    condition: and(succeeded(), or(contains(variables['semVer'], 'alpha'), contains(variables['semVer'], 'beta')), ne(variables['system.pullrequest.isfork'], true), startsWith(variables['Build.SourceBranch'], 'refs/tags/'))
+    condition: and(succeeded(), or(contains(variables['preRel'], 'alpha'), contains(variables['preRel'], 'beta')), ne(variables['system.pullrequest.isfork'], true), startsWith(variables['Build.SourceBranch'], 'refs/tags/'))
     displayName: 'Mark alpha or beta as pre-release'
 
   # create or update github release
@@ -139,6 +144,7 @@ jobs:
       target: $(Build.SourceVersion)
       tagSource: manual
       tag: '$(Build.SourceBranchName)'
+      title: 'Hyperion $(semVer)'
       assets: '$(Build.ArtifactStagingDirectory)/*'
       assetUploadMode: 'replace'
       addChangeLog: false
